force-app/main/default/objects/Loan_Document__c/Loan_Document__c.object-meta.xml
<CustomObject>
    <label>Loan Document</label>
    <nameField>
        <label>Loan Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>