force-app/main/default/objects/Loan_Document__c/fields/Loan_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Loan_Enquiry__c</fullName>
    <label>Loan Enquiry</label>
    <referenceTo>Loan_Enquiry__c</referenceTo>
    <relationshipLabel>Loan Documents</relationshipLabel>
    <relationshipName>Loan_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>