force-app/main/default/objects/Loan_Document__c/fields/Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date__c</fullName>
    <label>Uploaded Date</label>
    <type>Date</type>
</CustomField>